# StudentPerformanceAnalys

./: .gitignore  .replit  TEST_DATA_REFERENCE.md  TRAINING_DATA_INFO.md  app.py  ml_model.py  models.py  pyproject.toml  replit.md  test_cases.md  test_data_excellent_students.xlsx  test_data_good_students.xlsx  test_data_mixed_profiles.xlsx
.local/state/replit/agent/: .latest.json
attached_assets/: Pasted--Task-Completed-Student-Performance-Prediction-Project-Summary-Project-Overview-The-Student-Perfor-1755557210724_1755557210724.txt
instance/: student_performance.db
sample_data/: README.md  excellent_students_sample.xlsx  good_students_sample.xlsx  large_class_30_students.xlsx  mixed_students_sample.xlsx  sample_students.xlsx  test_data_average_students.xlsx  test_data_poor_students.xlsx
static/css/: custom.css
static/js/: app.js
templates/: dashboard.html  full_presentation.html  index.html  presentation.html
templates/auth/: login.html  register.html
